@@ -25,13 +25,13 @@ if $tracelevel then {
 
 set additional_flags ""
 lappend additional_flags "-fobjc-exceptions"
-
 # load support procs
 load_lib objc-torture.exp
 load_lib torture-options.exp
 
 torture-init
-set-torture-options $OBJC_TORTURE_OPTIONS $OBJC_RUNTIME_OPTIONS
+objc-set-runtime-options "execute" "additional_flags=-fobjc-exceptions"
+set-torture-options $OBJC_TORTURE_OPTIONS $OBJC_RUNTIME_OPTIONS 
 
 #
 # main test loop
