@@ -28,7 +28,8 @@ load_lib objc-torture.exp
 load_lib torture-options.exp
 
 torture-init
-set-torture-options $OBJC_TORTURE_OPTIONS $OBJC_RUNTIME_OPTIONS
+objc-set-runtime-options "execute"
+set-torture-options $OBJC_TORTURE_OPTIONS $OBJC_RUNTIME_OPTIONS 
 
 #
 # main test loop
